該当するものがなかったり複数あったときにわかるようにする